Add dependency relationships to catalog components

--- a/catalog-data/admin-portal.yaml
+++ b/catalog-data/admin-portal.yaml
@@ -17,4 +17,7 @@ spec:
   lifecycle: production
   owner: team-operations
   system: internal-tools
+  dependsOn:
+    - api-gateway
+    - ui-components
 
