--- a/catalog-data/payment-service.yaml
+++ b/catalog-data/payment-service.yaml
@@ -20,4 +20,7 @@ spec:
   lifecycle: production
   owner: team-commerce
   system: payment-infrastructure
+  dependsOn:
+    - api-gateway
+    - data-client
 
