Add GitLab configuration support
- Add gitlab config section to ApertureConfig interface
- Update aperture.config.ts with GitLab projects array
- Update aperture.config.example.ts with GitLab examples and docs
- Create .env.example with GITLAB_ENABLED and GITLAB_TOKEN
- Document required 'read_api' scope for GitLab PAT
- Support wildcards and nested groups in project paths

--- a/.env.example
+++ b/.env.example
@@ -1,47 +1,25 @@
-# Aperture IDP Environment Configuration
-# Copy this file to .env.local and fill in your values
-
-# ===================================
 # GitHub Integration
-# ===================================
-
-# Enable or disable GitHub catalog import feature
-# Set to 'true' to enable importing catalog files from GitHub repositories
+# Enable GitHub catalog imports
 GITHUB_ENABLED=false
 
 # GitHub Personal Access Token
-# Required if GITHUB_ENABLED is true
-# 
-# How to create a token:
-# 1. Go to GitHub Settings → Developer settings → Personal access tokens → Tokens (classic)
-# 2. Click "Generate new token (classic)"
-# 3. Give it a descriptive name (e.g., "Aperture IDP")
-# 4. Select the 'repo' scope (Full control of private repositories)
-# 5. Click "Generate token" and copy the token
-# 
-# Note: Keep this token secure and never commit it to version control
-GITHUB_TOKEN=your_github_personal_access_token_here
+# Create at: https://github.com/settings/tokens
+# Required scopes: 'repo' (for private repos) or 'public_repo' (for public only)
+GITHUB_TOKEN=your_github_token_here
 
-# ===================================
-# Next.js Configuration (Optional)
-# ===================================
 
-# Uncomment and set these if needed for your deployment
+# GitLab Integration  
+# Enable GitLab catalog imports
+GITLAB_ENABLED=false
 
-# The URL of your application (used for absolute URLs)
-# NEXT_PUBLIC_APP_URL=http://localhost:3000
+# GitLab Personal Access Token
+# Create at: https://gitlab.com/-/user_settings/personal_access_tokens
+# Required scopes: 'read_api'
+GITLAB_TOKEN=your_gitlab_token_here
 
-# Node environment
-# NODE_ENV=development
 
-# ===================================
-# Future Integrations (Placeholder)
-# ===================================
-
-# GitLab Integration (Not yet implemented)
-# GITLAB_ENABLED=false
-# GITLAB_TOKEN=
-
-# Bitbucket Integration (Not yet implemented)
+# Future Integrations
 # BITBUCKET_ENABLED=false
 # BITBUCKET_TOKEN=
+# AZURE_DEVOPS_ENABLED=false
+# AZURE_DEVOPS_TOKEN=
