--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "temp-app",
+  "name": "aperture-idp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,9 +12,13 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
+    "better-sqlite3": "^12.4.1",
     "js-yaml": "^4.1.0",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
+    "next-auth": "^5.0.0-beta.30",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "reactflow": "^11.11.4"
