Add feature flags for Git activity and scoring
- Introduce feature flags for enabling/disabling Git activity metrics and component scoring.
- Implement API endpoints to fetch and update feature flags.
- Update relevant components and services to respect feature flags.
- Add admin settings page for managing feature flags.
- Enhance scoring calculation to conditionally include activity metrics based on feature flags.

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,7 @@ GITLAB_TOKEN=your_gitlab_token_here
 # BITBUCKET_TOKEN=
 # AZURE_DEVOPS_ENABLED=false
 # AZURE_DEVOPS_TOKEN=
+
+# Auth secret
+# run `openssl rand -base64 32`
+AUTH_SECRET=your-auth-secret-here
