Add .env.example template for secure deployment
- Document all required environment variables
- Provide AUTH_SECRET generation instructions
- Include optional configuration for GitHub/GitLab integrations
- Add rate limiting configuration options

--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,19 @@
-# GitHub Integration
-# Enable GitHub catalog imports
+# Authentication
+# Generate with: openssl rand -base64 32
+AUTH_SECRET=your-secret-key-here
+
+# Database
+DATABASE_PATH=./data/users.db
+
+# GitHub Integration (Optional)
 GITHUB_ENABLED=false
+GITHUB_TOKEN=
 
-# GitHub Personal Access Token
-# Create at: https://github.com/settings/tokens
-# Required scopes: 'repo' (for private repos) or 'public_repo' (for public only)
-GITHUB_TOKEN=your_github_token_here
-
-
-# GitLab Integration  
-# Enable GitLab catalog imports
+# GitLab Integration (Optional)
 GITLAB_ENABLED=false
+GITLAB_TOKEN=
 
-# GitLab Personal Access Token
-# Create at: https://gitlab.com/-/user_settings/personal_access_tokens
-# Required scopes: 'read_api'
-GITLAB_TOKEN=your_gitlab_token_here
-
-
-# Future Integrations
-# BITBUCKET_ENABLED=false
-# BITBUCKET_TOKEN=
-# AZURE_DEVOPS_ENABLED=false
-# AZURE_DEVOPS_TOKEN=
-
-# Auth secret
-# run `openssl rand -base64 32`
-AUTH_SECRET=your-auth-secret-here
+# Rate Limiting (Optional)
+# Uses in-memory store by default. For production, configure Redis:
+# UPSTASH_REDIS_REST_URL=
+# UPSTASH_REDIS_REST_TOKEN=
